--- a/Advocacia Site/my-app/src/components/equipSection/style.module.css
+++ b/Advocacia Site/my-app/src/components/equipSection/style.module.css
@@ -1,6 +1,6 @@
 .sectionEquip{
    
-           
+    scroll-margin-top: 90px; 
    width: 100%;
    padding: 40px 0;
     
@@ -55,7 +55,7 @@
     }
 }
 
-@media(width > 700px){
+@media(width > 1000px){
     .sectionEquip{
         width: 100%;
         display: flex;
