--- a/Advocacia Site/my-app/src/components/formEmail/styles.module.css
+++ b/Advocacia Site/my-app/src/components/formEmail/styles.module.css
@@ -1,7 +1,7 @@
 /* From Uiverse.io by anniekoop */ 
 .input {
     font-family: "SF Pro";
-    min-width: 180px;
+    min-width: 200px;
     padding: 0.875rem;
     font-size: 1rem;
     border: 1.5px solid #000;
@@ -9,6 +9,7 @@
     box-shadow: 2.5px 3px 0 #000;
     outline: none;
     transition: ease 0.25s;
+  
    
   }
 
@@ -23,6 +24,8 @@
 
     textarea{
         margin-bottom: 20px;
+      min-width: 200px;
+      resize: none;
     }
     
     h2{
@@ -34,10 +37,52 @@
   .input:focus {
     box-shadow: 5.5px 7px 0 black;
   }
+
+
+  .btn{
+    width: 280px;
+    height: 42px;
+    background-color: #FFBC42;
+    color:black;
+    font-size: 20px;
+    font-weight: 200;
+    
+    
+    border-style: none;
+    border-radius: 30px;
+ 
+    
+}
+.btn:hover{
+ background-color:#041633;
+ border: 1px solid white;
+ color: white;
+ font-weight: bold;
+ cursor: pointer;
+ transition: background-color 0.2s ease ;
+}
+
+@media(width < 1000px) {
+    .btn{
+        max-width:  200px;
+        height: 34px;
+       
+        
+        font-size: 18px;
+        
+       
+        
+      
+        
+    }
+}
+
+
+
   
-  @media(width > 1200px) {
+  @media(width > 600px) {
     .input{
-        width: 460px;
+       width: 460px;
         text-align: center;
         font-size: 20px;
         
