--- a/Advocacia Site/my-app/src/components/banner/styles.module.css
+++ b/Advocacia Site/my-app/src/components/banner/styles.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 780px;
     position: relative;
+    padding-top: 82px;
 
 }
 .images{
@@ -20,7 +21,7 @@
     position: absolute; 
     top: 50%; 
     left: 50%; 
-    transform: translate(-50%, -55%); 
+    transform: translate(-50%, -50%); 
     color: white;
     align-items: center;
    justify-content: center;
@@ -77,7 +78,7 @@
 }
 
 @media(width < 1000px){
-    banner {
+    .banner {
         width: 100%;
         height: 350px;
         position: relative;
@@ -160,7 +161,10 @@
 
 @media(width > 300px) and (width < 1000px) {
     .banner {
+       margin-top: 78px;
+       padding:0 ;
         height: 300px;
+        scroll-margin-top: 100px; 
     }
 
     .images {
@@ -196,5 +200,35 @@
        
        
 }
+   
+
+}
+
+@media(width > 1000px) and (width < 1760px ) {
+
+    .banner{
+        margin-top: 0x;
+        padding-top: 60px;
+    }
+    
+    .texto{
+        
+        transform: translate(-48%, -40%);
+        .h1{
+            font-size: 50px;
+        }
+    }
+     
+}
+
+
+@media(width > 700px) and (width < 1000px ) {
+
+    .banner{
+        margin-top: 0x;
+        padding-top: 20px;
+    }
+
+
 
 }
