--- a/Advocacia Site/my-app/src/components/entreEmcontato/style.module.css
+++ b/Advocacia Site/my-app/src/components/entreEmcontato/style.module.css
@@ -2,6 +2,9 @@
 .contatoSection{
     background-color:#011638;
     padding: 40px 0;
+    padding-bottom: 80px;
+    scroll-margin-top: 80px; 
+    
     .titulo{
         color: white;
         text-align: center;
@@ -46,7 +49,7 @@
     .formulario{
         margin-top: 40px;
         background-color:#002855;
-        width: 80%;
+        width: 100%;
         padding: 30px 0;
        
         border-radius: 8px;
@@ -67,8 +70,17 @@
 }
 }
 
-@media(width > 800px) {
+@media(width >1200px) {
     .contatoSection{
+
+        .titulo{
+            h2{
+                font-size: 40px;
+            }
+            p{
+                font-size:20px;
+            }
+        }
    .contato{
     .containerContato{
         display: flex;
