--- a/Advocacia Site/my-app/src/components/footer/style.module.css
+++ b/Advocacia Site/my-app/src/components/footer/style.module.css
@@ -2,6 +2,7 @@
     background-color:#011638;
     color: white;
     padding: 40px 0;
+    box-shadow: 0 0 3px #0642a3;
     
     
   
@@ -25,8 +26,24 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
+            a{
+                color: white;
+                text-decoration: none;
+            }
         }
     }
+    a:hover{
+        background-color: rgb(54, 23, 194);
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        font-size: 16px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.5s ease; /* Transição suave */
+    }
+    
 
 
 
